# pymacaroons

./: pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
tests/property_tests/: macaroon_property_tests.py
