[project]
name = "pymacaroons"
version = "0.13.0"
description = "Macaroon library for Python"
authors = [
    {name = "Evan Cordell", email = "cordell.evan@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "six>=1.8.0",
    "PyNaCl>=1.1.2,<2.0"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Security",
]
[project.urls]
Documentation = "http://pymacaroons.readthedocs.org/"
Repository = "https://github.com/ecordell/pymacaroons"
Issues = "https://github.com/ecordell/pymacaroons/issues"

[tool.distutils.bdist_wheel]
universal = true
